5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_2447.log
== SUBMITION (2019-04-14 21:02:19) 
-- CODE:
pr= float(input("preco :"))
pag = float(input("pagamento: "))
if (pr > pag) :
	x = pr - pag
	print("falta ", x)
	
else:
	y = pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.140101
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:22) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.148408
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:26) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.15558
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:27) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.258424
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:27) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.270347
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
falta  26.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  28.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.272944
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de  28.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  0.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
falta  26.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.325861
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
falta  26.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.629426
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  0.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.596558
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:03:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.441128
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de  28.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  0.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:09:56) 
-- CODE:
p= float(input("preco :"))
pg= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.213127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 4, in <module>
    if ( pr > pag ) :
NameError: name 'pr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:10:33) 
-- CODE:
p = float(input("preco :"))
pg = float(input("pagamento: "))

if ( p > pg ) :
	x= p - pg
	print("falta ", x)
	
else :
	y= pg - p
	print("troco de ", y)
-- EXECUTION TIME:
0.167772
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:10:36) 
-- CODE:
p = float(input("preco :"))
pg = float(input("pagamento: "))

if ( p > pg ) :
	x= p - pg
	print("falta ", x)
	
else :
	y= pg - p
	print("troco de ", y)
-- EXECUTION TIME:
0.286607
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:11:56) 
-- CODE:
p = float(input("preco :"))
pg = float(input("pagamento :"))

if ( p > pg ) :
	x= p - pg
	print("falta ", x)
	
else :
	y= pg - p
	print("troco de ", y)
-- EXECUTION TIME:
0.170704
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:11:59) 
-- CODE:
p = float(input("preco :"))
pg = float(input("pagamento :"))

if ( p > pg ) :
	x= p - pg
	print("falta ", x)
	
else :
	y= pg - p
	print("troco de ", y)
-- EXECUTION TIME:
0.228548
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:12:54) 
-- CODE:
pr = float(input("preco :"))
pag = float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.194553
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:13:26) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.15038
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:32) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:14:23) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:38) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
	print("troco de ", y)
-- EXECUTION TIME:
0.157504
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:49) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
print("troco de ", y)
-- EXECUTION TIME:
0.189601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 10, in <module>
    print("troco de ", y)
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:52) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
 print("troco de ", y)
-- EXECUTION TIME:
0.184531
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:55) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
  print("troco de ", y)
-- EXECUTION TIME:
0.170584
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)
                        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:02) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.180982
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.20233
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.249148
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.253243
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.331306
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento:"))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.243566
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2447/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:14) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.174932
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:15:17) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))

if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
	
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.150312
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 10
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:02:25) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
else :
	y= pag - pr
   print("troco de ", y)  
-- EXECUTION TIME:
0.199125
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:02:28) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("falta ", x)
else :
	y= pag - pr
   print("troco de ", y)  
-- ERROR:
File "XXXX", line 8
    print("troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:05:03) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ", x)
else :
	y= pag - pr
   print("Troco de ", y)  
-- EXECUTION TIME:
0.204342
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ", y)  
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:06:22) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ", round(x,2))
else :
	y= pag - pr
   print("Troco de ", round(y,2))
-- EXECUTION TIME:
0.173594
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ", round(y,2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:07:20) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x,2))
else :
	y= pag - pr
   print("Troco de ",round(y,2))
-- ERROR:
File "XXXX", line 8
    print("Troco de ",round(y,2))
                                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:08:31) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- EXECUTION TIME:
0.266493
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:28:32) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- ERROR:
File "XXXX", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:30:53) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- ERROR:
File "XXXX", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:33:37) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	x= pag - pr
   print("Troco de ",round(x, 2))
-- EXECUTION TIME:
0.143299
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(x, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:33:41) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	x= pag - pr
   print("Troco de ",round(x, 2))
-- ERROR:
File "XXXX", line 8
    print("Troco de ",round(x, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:35:09) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
if ( pr <= pag ) :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- EXECUTION TIME:
0.195963
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:35:15) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
if ( pr <= pag ) :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- EXECUTION TIME:
0.158422
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:35:21) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
if ( pr <= pag ) :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- ERROR:
File "XXXX", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:35:46) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	y= pag - pr
   print("Troco de ",round(y, 2))
-- EXECUTION TIME:
0.141383
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:36:59) 
-- CODE:
pr= float(input("preco :"))
pag= float(input("pagamento: "))
if ( pr > pag ) :
	x= pr - pag
	print("Falta ",round(x, 2))
else :
	y= pag - pr
   print("Troco de ",round(y, 2))
	
-- EXECUTION TIME:
0.209985
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 8
    print("Troco de ",round(y, 2))
                                 ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
